--- a/l10n_do_accounting/views/account_move_views.xml
+++ b/l10n_do_accounting/views/account_move_views.xml
@@ -90,7 +90,10 @@
             </xpath>
             <field name="journal_id" position="after">
                 <field name="l10n_do_ecf_security_code" attrs="{
-                'invisible': ['|', '|', '|', ('partner_id', '=', False), ('l10n_latam_country_code', '!=', 'DO'), ('is_l10n_do_internal_sequence', '=', True), ('is_ecf_invoice', '=', False)]}"/>
+                'invisible': [
+                '|', ('is_ecf_invoice', '=', False),
+                '|', ('l10n_latam_country_code', '!=', 'DO'), ('is_l10n_do_internal_sequence', '=', True)
+                ]}"/>
                 <field name="l10n_do_ecf_sign_date" invisible="1"/>
                 <field name="l10n_do_electronic_stamp" invisible="1"/>
             </field>
